...
                    <navigationItem key="navigationItem" id="vc1-Vc-8Rm">
                        <nil key="title"/>
                        <barButtonItem key="backBarButtonItem" title="Cocktails" id="apO-Us-fTS"/>
                        <view key="titleView" contentMode="scaleToFill" id="9NG-WB-0pI">
                            <rect key="frame" x="207" y="22" width="0.0" height="0.0"/>
...
                    <navigationItem key="navigationItem" id="End-GK-1pR">
                        <nil key="title"/>
                        <barButtonItem key="backBarButtonItem" title="My Diary" id="uZF-7Y-gMR"/>
                        <view key="titleView" contentMode="scaleToFill" id="Ftp-aR-erv">
                            <rect key="frame" x="207" y="22" width="0.0" height="0.0"/>
...
                                                </constraints>
                                            </imageView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DEVELOPMENT TEAM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ROw-h1-sH5">
                                                <rect key="frame" x="105.5" y="21" width="203" height="26"/>
                                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="19"/>
...
                                                    <constraint firstAttribute="height" constant="28" id="o6F-W4-PjN"/>
                                                </constraints>
                                                <state key="normal" image="Star"/>
                                                <connections>
                                                    <action selector="favoriteButtonPressed:" destination="sFw-bP-GyJ" eventType="touchUpInside" id="31k-ae-mHi"/>
...
                                                    <constraint firstAttribute="height" constant="30" id="Ali-5u-AxN"/>
                                                </constraints>
                                                <state key="normal" title="Pick From Library"/>
                                                <connections>
                                                    <action selector="selectExistingPictureOrVideo:" destination="Fxu-zd-GMg" eventType="touchUpInside" id="ySz-b5-u2f"/>
...
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Quantity" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Gg-kJ-KG6">
                                                <rect key="frame" x="298" y="666" width="76" height="30"/>
                                                <nil key="textColor"/>
...
