...
    
    private mutating func loadData(){
//        cocktails.append(Cocktail(cocktailName: "Manhattan", imageName: "manhattan"))
//        cocktails.append(Cocktail(cocktailName: "LITT", imageName: "liit"))
//        cocktails.append(Cocktail(cocktailName: "Margarita", imageName: "margarita"))
//        cocktails.append(Cocktail(cocktailName: "Old Fashioned", imageName: "oldfashioned"))
//        cocktails.append(Cocktail(cocktailName: "Mojito", imageName: "mojito"))
//        cocktails.append(Cocktail(cocktailName: "Manhattan", imageName: "manhattan"))
//        cocktails.append(Cocktail(cocktailName: "LITT", imageName: "liit"))
//        cocktails.append(Cocktail(cocktailName: "Margarita", imageName: "margarita"))
//        cocktails.append(Cocktail(cocktailName: "Old Fashioned", imageName: "oldfashioned"))
//        cocktails.append(Cocktail(cocktailName: "Mojito", imageName: "mojito"))
        getCocktailDetailFromJSON()
...
